--- a/todoapp-presentation/src/main/angular/src/index.html
+++ b/todoapp-presentation/src/main/angular/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Example06</title>
+  <title>DO - the future of to-do!</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
